# BDXDaq

./: .gitignore
devel/: .setup
devel/clon/: .setup
devel/clon/src/: AAA  (+6 more)
devel/coda/: .setup
devel/coda/src/et/: Makefile  README  config.cache  config.status  configure  configure.in
devel/coda/src/et/CVS/: Entries  Repository
devel/coda/src/et/doc/CVS/: Repository  Root
devel/coda/src/et/doc/htm/: creating_system.htm  et_manual.htm  examples.htm  introduction.htm  routine_list.htm  useful_macros.htm  user_routines.htm  using_system.htm
devel/coda/src/et/doc/htm/CVS/: Entries  Repository
devel/coda/src/et/doc/htm/images/CVS/: Repository
devel/coda/src/et/et.s/: Makefile.vxworks-ppc  et.h  et_bridge.c  et_common.c  et_data.h  et_init.c  et_local.c  et_mem.c  et_network.c  et_noshare.c  et_private.h  et_remoteclient.c  et_server.c  et_statconfig.c  et_sysconfig.c  et_system.c
devel/coda/src/et/examples/: Makefile  Makefile.in  et_2_et.c  et_client  et_client.c  et_client_simple  et_client_simple.c  et_netclient.c  et_producer.h  et_producer1.c  et_producer2.c  et_start.c  et_userfunction.c
devel/coda/src/et/examples/CVS/: Entries  Repository
devel/coda/src/et/java/: Consumer.java  Makefile  Makefile.in  Producer.java  StartEt.java  about.html  allclasses-frame.html  allclasses-noframe.html  alphaindex.html  constant-values.html  deprecated-list.html  deprecated.html  gjdoc.properties  help-doc.html  index-all.html  index.html  overview-tree.html  package-list  packages.html  serialized-form.html
devel/coda/src/et/java/CVS/: Entries  Repository
devel/coda/src/et/java/org/CVS/: Repository
devel/coda/src/et/java/org/jlab/CVS/: Repository
devel/coda/src/et/java/org/jlab/coda/CVS/: Repository
devel/coda/src/et/java/org/jlab/coda/et/: AllData.html  Attachment.html  AttachmentData.html  AttachmentData.java  AttachmentLocal.html  AttachmentLocal.java  ClientThread.html  Constants.html  Constants.java  DatagramReceive.html  EtBusyException.html  EtBusyException.java  EtEmptyException.html  EtException.html  EtException.java  EtExistsException.html  EtMonitor.html  EtMonitor.java  EtReadException.html  EtTimeoutException.html  EtTooManyException.html  EtWakeUpException.html  EtWriteException.html  EtWriteException.java  Event.html  Event.java  EventList.html  EventList.java  EventSelectable.html  ListeningThread.html  Makefile  Makefile.in  ProcessData.html  Station.html  Station.java  StationConfig.html  StationConfig.java  StationData.html  StationLocal.html  StationLocal.java  (+22 more)
devel/coda/src/et/java/org/jlab/coda/et/CVS/: Entries  Repository
devel/coda/src/et/java/org/jlab/coda/etMonitor/: Makefile.in  Monitor.java  MonitorConfiguration.java  MonitorSingleSystem.java  WholeNumberField.java  monitorConfiguration.xsd
devel/coda/src/et/java/org/jlab/coda/etMonitor/CVS/: Entries  Repository
devel/coda/src/et/main/: et2et_swap.c  et_2_et.c  et_2_et_10_00.c  et_2_et_10_01.c  et_2_et_10_02.c  et_2_et_multi.c  et_client.c  et_producer.c  et_producer.h  et_producer1.c  et_producer2.c  et_start.c
devel/coda/src/et/main/cinclude/: bosRecordSwap.c  codassipc.c  et2et.c
devel/coda/src/et/main/obsolete/: et_2_et.c_new  et_2_et.c_save  et_2_et_10_00.c.old  et_2_et_10_04.c.old  et_start.c_original
devel/coda/src/et/main_orig/: Makefile.vxworks-ppc  SConscript.vx  et_client_simple.c  et_netclient.c  et_producer1.c  et_producer2.c  prifinfo.c
devel/coda/src/et/obsolete/: .sconsign.dblite  Makefile  SConstruct  build.xml
devel/coda/src/et/obsolete/doc/htm/: creating_system.htm  et_manual.htm  etmanual.css  remote_et.htm  table_of_contents.htm  useful_macros.htm  user_routines.htm
devel/coda/src/et/obsolete/java/: Consumer.java  Producer.java
devel/coda/src/et/obsolete/java/jars/: README
devel/coda/src/et/obsolete/java/org/jlab/coda/et/: AllData.java  Constants.java  EtEmptyException.java  EtExistsException.java  EtMonitor.java  EventList.java  Station.java  SystemConfig.java  SystemData.java  SystemOpenConfig.java  SystemTcpServer.java  SystemUdpServer.java  SystemUse.java
devel/coda/src/et/obsolete/java/org/jlab/coda/etMonitor/: MonitorConfiguration.java
devel/coda/src/et/src/: Makefile  Makefile.in  Makefile.vx  et.h  et_attachment.c  et_bigint.c  et_bridge.c  et_common.c  et_data.c  et_data.h  et_event.c  et_init.c  et_local.c  et_mem.c  et_monitor.c  et_network.c  et_network.h  et_noshare.c  et_openconfig.c  et_private.h  et_readwrite.c  et_remote.c  et_remoteclient.c  et_server.c  et_statconfig.c  et_station.c  et_sysconfig.c  et_system.c
devel/coda/src/et/src/CVS/: Entries  Repository
devel/coda/src/et/user/: et_userfunction.c
devel/epics/: .gitignore  .setup  README.md
parms/: clonbanks.ddl  clonbanks.xml
parms/TT/: ROC00.tab  ROC01_old.tab  ROC02.old.tab  ROC03.tab  ROC04.tab  ROC05.tab  ROC06.tab  ROC07.tab  ROC08.tab  ROC09.tab  ROC10.tab  ROC11.tab  ROC12.tab  ROC12_CC_only.tab  ROC12_backup.tab  ROC12_std.tab  ROC13.tab  ROC14.tab  ROC15.tab  ROC16.tab  ROC17.tab  ROC18.tab  ROC19.tab  ROC20.tab  ROC21.tab  ROC22.tab  ROC23.tab  ROC24.tab  ROC25.tab  ROC26.tab  ROC27.tab  ROC28.tab  ROC29.tab  ROC30.tab  ROC31.tab  ROC32.tab
parms/fadc250/: fadc.1.cnf  fadc.cnf  pedestals.cnf
parms/pedestals/: default.cnf  run538.ped  run539.ped  run541.ped  run542.ped  run543.ped  run544.ped  run545.ped  run546.ped  run547.ped  run548.ped  run549.ped  run552.ped  run553.ped  run554.ped  run555.ped  run556.ped  run557.ped  run558.ped  run559.ped  run560.ped  run561.ped  run562.ped  run563.ped  run564.ped  run565.ped  run566.ped  run567.ped  run568.ped  run569.ped  run570.ped  run571.ped  run572.ped  run573.ped  run574.ped  run575.ped  run576.ped  run577.ped  run578.ped  run579.ped  (+96 more)
parms/run_files/: runfile_fadc1720_000001.txt  runfile_fadc1720_000002.txt  runfile_fadc1720_000003.txt  runfile_fadc1720_000126.txt  runfile_fadc1720_000127.txt  runfile_fadc1720_000128.txt  runfile_fadc1720_000129.txt  runfile_fadc1720_000130.txt  runfile_fadc1720_000131.txt  runfile_fadc1720_000132.txt  runfile_fadc1720_000133.txt  runfile_fadc1720_000134.txt  (+151 more)
(+11146 files in other folders)
